--- a/package.json
+++ b/package.json
@@ -1,28 +1,34 @@
 {
-  "name": "mp-collections-heroui",
-  "version": "0.1.0",
+  "name": "mp-collections-react-tailwind",
+  "version": "1.0.0",
   "private": true,
+  "description": "App for my collections with React and tailwind.",
+  "homepage": "https://marcospaulo19.github.io/mp-collections-react-tailwind/",
   "dependencies": {
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "@heroicons/react": "^2.2.0",
+    "autoprefixer": "^10.4.16",
+    "class-variance-authority": "^0.7.1",
+    "framer-motion": "^12.12.2",
+    "lucide-react": "^0.511.0",
+    "postcss": "^8.4.24",
+    "react": "^18.2.0",
+    "react-countup": "^6.5.3",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.6.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.15.3",
+    "tailwind-merge": "^3.3.0",
+    "tailwindcss": "^3.4.1",
+    "tw-animate-css": "^1.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
@@ -35,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
