Used links of api and refactor

--- a/.env.development
+++ b/.env.development
@@ -1,8 +1,8 @@
 # Hash SHA-256 do username autorizado (valor sensível não exposto diretamente no frontend)
 REACT_APP_AUTH_HASH=
-# API KEY TMBD do https://www.themoviedb.org/
-REACT_APP_TMDB_API_KEY=
-# SHEET ID da planinha do Google Sheets
-REACT_APP_SHEET_ID=
-# API KEY do Google Sheets
-REACT_APP_API_KEY=
+# URL TMBD do Movie
+REACT_APP_URL_TMDB_MOVIE=
+# URL TMBD do Credits
+REACT_APP_URL_TMDB_CREDITS=
+# URL API SHEETS
+REACT_APP_URL_SHEETS=
